# general_modular_components

./: README.md
polite-fetcher-folder/: README.md  pyproject.toml
polite-fetcher-folder/polite_fetcher/: README.md  config.py
polite-fetcher-folder/polite_fetcher/configs/: README.md  unitn_seed_smoke.toml
polite-fetcher-folder/polite_fetcher/crawler/: README.md  items.py  pipelines.py  run_seed_crawl.py  settings.py
polite-fetcher-folder/polite_fetcher/crawler/spiders/: README.md  seed_spider.py
polite-fetcher-folder/polite_fetcher/storage/: README.md  ids.py  manifest.py  paths.py  raw_store.py
polite-fetcher-folder/tests/: README.md  test_crawler_pipeline.py  test_storage_foundation.py
